# tusk

./: .travis.yml  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  format_request.md  input_request.md  output_request.md  processor_request.md  project_improvement.md
config/: tusk.yaml
src/: common.rs  main.rs
src/plugins/: mod.rs
src/plugins/inputs/: mod.rs  random.rs
src/plugins/outputs/: mod.rs  stdout.rs
src/plugins/processors/: add_tag.rs  mod.rs
src/tusk/: filter.rs  mod.rs  pipeline.rs  wrapper.rs
